--- a/global/package.json
+++ b/global/package.json
@@ -7,7 +7,10 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
+    "react-app-rewire-hot-loader": "^2.0.1",
+    "react-app-rewired": "^2.1.11",
     "react-dom": "^17.0.2",
+    "react-hot-loader": "^4.13.0",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
     "styled-reset": "^4.3.4",
