--- a/global/package.json
+++ b/global/package.json
@@ -11,7 +11,9 @@
     "react-app-rewired": "^2.1.11",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
+    "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
     "styled-components": "^5.3.3",
     "styled-reset": "^4.3.4",
     "web-vitals": "^2.1.4"
